qtdemux: segmentation fauit with protected DASH streams
@jsachs
Submitted by Juergen Sachs Link to original bug (#787061)
Description
Created attachment 358824
detailed gdb backtrace
When decoding a protected DASH stream, the qtdemux raises a segmentation fault. This can be reproduced by
gst-launch-1.0 http://freenettvcon10-i.akamaihd.net/dash/live/499767/freenet10/dash.mpd
The stream is the DASH source of a freenet.TV internet connect service "Insight (connect". Obviously this content is protected. Gstreamer should not crash event we no not have any protection handling plugin.
The crash occures in qtdemux when the audio init segment is parsed:
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 2062]
0xb0469428 in __gst_slow_read32_le (data=0x78657278 <Address 0x78657278 out of bounds>)
at /home/metz/Projekte/G_SX7/DCP_SYS/Install/Core/.tmp/include/gstreamer-1.0/gst/gstutils.h:255
255 return _GST_READ_UINT32_LE (data);
(gdb) bt
#0 0xb0469428 in __gst_slow_read32_le (data=0x78657278 <Address 0x78657278 out of bounds>)
at /home/metz/Projekte/G_SX7/DCP_SYS/Install/Core/.tmp/include/gstreamer-1.0/gst/gstutils.h:255
#1 0xb04a0a58 in qtdemux_parse_trak (qtdemux=0xb030e308, trak=0xb4103248)
at /home/metz/Projekte/G_SX7/DCP_SYS/Media/GST-1.0/gst-plugins-good/gst/isomp4/qtdemux.c:11140
=====
More detailed log attached
More information about the bug will follow
Attachment 358824, "detailed gdb backtrace":
gdb.log
Version: 1.12.2